# mediapipe

./: WORKSPACE
mediapipe/examples/android/src/java/com/google/mediapipe/apps/AAR/: BUILD.bazel
